# arl_hw_ethercat

./: .gitmodules  CMakeLists.txt  package.xml
config/: driver.yaml
include/arl_hw_ethercat/: datatypes.h  driver_utils.h  ethercat_master.h  robot.h  rt_history.h
launch/: arl_robot_driver.launch
patches/: build_soem_shared.patch  make_shared.patch
src/: driver.cpp  driver_utils.cpp  ethercat_master.cpp  robot.cpp  rt_history.cpp
tests/: ethercat_master_test.cpp
