<?xml version="1.0"?>
<package format="2">
  <name>arl_hw_ethercat</name>
  <version>0.0.0</version>
  <description>The arl_hw_ethercat package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/arl_hw_ethercat</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>arl_interfaces</build_depend>
  <build_depend>arl_controllers</build_depend>
  <build_depend>arl_hw_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>arl_interfaces</exec_depend>
  <exec_depend>arl_controllers</exec_depend>
  <exec_depend>arl_hw_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>std_srvs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
